--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Online , JS , Alert Calculator</h1>
     <script src = "script.js"></script>
 </body>
 </html>
